# oss-radar

./: .env.example  .gcloudignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
pipeline/: Dockerfile  pyproject.toml  requirements.txt
pipeline/oss_radar/: __init__.py  cli.py
pipeline/oss_radar/agents/: __init__.py  context.py  crew.py  github_ops.py  improver.py  llm.py
pipeline/oss_radar/audit/: __init__.py  auditor.py
pipeline/oss_radar/config/: __init__.py  active_features.json  active_features.py  packages.py  settings.py
pipeline/oss_radar/features/: __init__.py  engineering.py  forward.py
pipeline/oss_radar/ingest/: __init__.py  collector.py  depsdev.py  ecosystems.py  github.py  healing.py  http.py  osv.py  pypi_downloads.py  pypi_metadata.py
pipeline/oss_radar/models/: __init__.py  backtest.py  drift.py  experiment.py  growth.py  risk.py  scoring.py  validation_gate.py
pipeline/oss_radar/orchestrator/: __init__.py  pipeline.py
pipeline/oss_radar/registry/: __init__.py  registry.py
pipeline/oss_radar/warehouse/: __init__.py  base.py  bigquery_backend.py  duckdb_backend.py  factory.py  schema.py
pipeline/scripts/: timeseries_analysis.py  validate_growth.py
pipeline/tests/: test_audit.py  test_features.py  test_github_ops.py  test_improvement.py  test_retrain_is_data_driven.py  test_scoring_and_config.py  test_self_healing_improvement.py  test_validation_gate.py  test_warehouse.py
pipeline/wolfram/: run_local.sh  validate_growth.wl
pipeline/wolfram/sample_data/: validation_oof.csv  validation_steps.md  validation_testset.csv  (+3 more)
(+49 files in other folders)
