[project]
name = "oss-radar"
version = "0.1.0"
description = "AI-managed open-source intelligence pipeline: forecasts package adoption momentum and dependency risk."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Milad Shaddelan" }]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["oss_radar*"]

[project.scripts]
oss-radar = "oss_radar.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "UP038"]
